# FeuillesDeChene

./: .gitignore  CMakeLists.txt  README.md
cli/: CMakeLists.txt  cli.cpp  cli.h  cli_record_manager.cpp  cli_record_manager.h  init_windows_console.h  main.cpp
core/: CMakeLists.txt
core/include/: core.h  difficulty_types.h  game_state.h  init_windows_console.h  load_result.h  record.h  record_manager.h  word.h  word_loader.h
core/src/: core.cpp  record_manager.cpp  word_loader.cpp
data/: cz_it.txt  en_de.txt  en_es.txt  en_fr.txt  en_it.txt  en_pl.txt  en_pt.txt  en_sv.txt  es_de.txt  fr_it.txt
qt/: CMakeLists.txt  application.cpp  application.h  application.ui
src/: main.cpp
web/: CMakeLists.txt  database1.txt  database2.txt  database3.txt  icons.js  index.html  media.css  style.css
web/src/: wasm_api.cpp
